# watchf

./: CMakeLists.txt  LICENCE  README.md  install_target  update_version.py
main/: CMakeLists.txt  main.c  watch.c
scripts/: watch
